--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,7 +25,7 @@ jobs:
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: mkdir ${{github.workspace}}/build}
     - name: buildfile
-      run: cd build && cmake
+      run: cd ${{github.workspace}}/build}&& cmake ..
     - name: Build
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build
