--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,6 +11,8 @@ env:
   BUILD_TYPE: Release
 
 jobs:
+
+
   build:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
@@ -19,6 +21,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: checkout all the submodules
+      uses: actions/checkout@v2
+      with:
+        submodules: recursive
+
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
