--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -36,7 +36,7 @@ jobs:
       run: cd ${{github.workspace}}/build}&& cmake ..
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build
+      run: cmake --build . && ls && pwd
 
     - name: Test
       working-directory: ${{github.workspace}}/build
