--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -31,12 +31,12 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: mkdir ${{github.workspace}}/build}
+      run: mkdir ${{github.workspace}}/build
     - name: buildfile
-      run: cd ${{github.workspace}}/build}&& cmake ..
+      run: cd ${{github.workspace}}/build&& cmake ..
     - name: Build
       # Build your program with the given configuration
-      run: ls && pwd && cmake --build .
+      run: cd ${{github.workspace}}/build && cmake --build .
 
     - name: Test
       working-directory: ${{github.workspace}}/build
