--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ add_subdirectory(sfml EXCLUDE_FROM_ALL)
 
 
 
-add_executable(Cpp_Game main.cpp)
-target_link_libraries(Cpp_Game PUBLIC sfml-graphics sfml-window sfml-system)
+add_executable(Cpp_Game main.cpp SHA256.cpp)
+target_link_libraries(Cpp_Game PUBLIC sfml-graphics sfml-window sfml-system sfml-network)
 
 
 target_include_directories(Cpp_Game PUBLIC
