Organized the project and added likely better CMakeLists file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,31 @@
+
 cmake_minimum_required(VERSION 3.14)
-project(Cpp_Game VERSION 0.1)
+project(Cpp_Game LANGUAGES CXX)
 find_package(Threads REQUIRED)
-add_subdirectory(sfml EXCLUDE_FROM_ALL)
-add_executable(Cpp_Game main.cpp SHA256.cpp)
+
+include(FetchContent)
+FetchContent_Declare(SFML
+    GIT_REPOSITORY https://github.com/SFML/SFML.git
+    GIT_TAG 2.6.x)
+FetchContent_MakeAvailable(SFML)
+
+add_executable(Cpp_Game src/main.cpp src/SHA256.cpp)
 target_link_libraries(Cpp_Game PRIVATE sfml-graphics sfml-window sfml-system sfml-network sfml-audio Threads::Threads)
-
-
-target_include_directories(Cpp_Game PUBLIC
-                          "${PROJECT_BINARY_DIR}/sfml/lib"
-                          "${PROJECT_SOURCE_DIR}/sfml/include"
+target_compile_features(Cpp_Game PRIVATE cxx_std_17)
+if (WIN32 AND BUILD_SHARED_LIBS)
+    add_custom_command(TARGET Cpp_Game POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:Cpp_Game> $<TARGET_FILE_DIR:Cpp_Game> COMMAND_EXPAND_LISTS)
+endif()
+add_custom_target(copy_assets
+    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_LIST_DIR}/assets ${CMAKE_CURRENT_BINARY_DIR}/assets
+)
+add_dependencies(Cpp_Game copy_assets)
+add_custom_target(copy_maps
+    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_LIST_DIR}/maps ${CMAKE_CURRENT_BINARY_DIR}/maps
+)
+add_dependencies(Cpp_Game copy_maps)
+target_include_directories(Cpp_Game PRIVATE
+                          "${PROJECT_SOURCE_DIR}/include"
                           )
 
-file(COPY assets DESTINATION ${CMAKE_BINARY_DIR})
-file(COPY maps DESTINATION ${CMAKE_BINARY_DIR})
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_BINARY_DIR})
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_BINARY_DIR})
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+install(TARGETS Cpp_Game)
