--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,5 +42,5 @@ jobs:
     - name: Upload build
       uses: actions/upload-artifact@v3
       with:
-        name: my-artifact 
+        name: ${{ matrix.platform.name }} ${{ matrix.config.name }}
         path: ./build
